# ConfigKit

./: .gitignore  README.md  pyproject.toml
example/: configuration.py  schema.json
src/configkit/: __init__.py  configkit.py
